src/styles/prose.css
.prose {
	@apply [margin-trim:block];

	> * {
		@apply !my-0;
	}

	> * + * {
		@apply !mt-[--prose-spacing,theme(spacing.6)];
	}

	> * + :is(figure, pre, astro-embed-tweet, .codepen, .cp_embed_wrapper),
	> :is(figure, pre, astro-embed-tweet, .codepen, .cp_embed_wrapper + script) + * {
		@apply [--lh:calc(theme(lineHeight.normal)*1rem)] [--half-leading:calc((var(--lh)-1rem)/2)] [--prose-spacing:calc(theme(spacing.6)+var(--half-leading))];
	}

	> * + :is(h2, h3, hr),
	> hr + * {
		@apply [--prose-spacing:theme(spacing.12)];
	}

	h2 {
		@apply text-2xl font-bold leading-tight kerning-all;
	}

	h3 {
		@apply text-lg font-bold leading-tight;
	}

	hr {
		@apply max-w-[8em] border-t-4;
	}

	pre {
		@apply -ml-[--container-margin-left] -mr-[--container-margin-right] pl-[--container-margin-left] pr-[--container-margin-right] text-sm leading-tight;
	}

	blockquote:not(.twitter-tweet) {
		@apply relative pl-[2em] space-y-5;
	}

	blockquote:not(.twitter-tweet)::before {
		@apply [--lh:calc(theme(lineHeight.normal)*1rem)] [--half-leading:calc((var(--lh)-1rem)/2)] content-[''] absolute inset-y-[--half-leading] left-0 border-l-2;
	}

	:is(ol, ul) {
		@apply list-[revert] pl-[2em] [margin-trim:block];
	}

	:is(ol, ul) :is(ol, ul) {
		@apply [margin-trim:none];
	}

	li {
		@apply mt-1;
	}

	figure {
		@apply space-y-3;
	}

	figcaption {
		@apply text-sm;
	}

	/* https://bugs.webkit.org/show_bug.cgi?id=260425 */
	code {
		quotes: "`" "`";
	}

	pre > code {
		quotes: none;
	}

	code::before {
		content: open-quote;
	}

	code::after {
		content: close-quote;
	}

	img {
		@apply ring-1 ring-dynamic;
	}

	details {
		@apply space-y-3;
	}
}

